[package]
name = "forged-in-lost-lands"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Bernardo"]
description = "Forged in Lost Lands is a simple game engine built in Rust that focuses on data control and ease of use"
license = "MIT"
repository = "https://github.com/GabrielBernardoDaSilva/forged-in-lost-lands"
include = [
    "README.md",
    "LICENSE",
    "examples/*",
    "prime-derived/*",
    "prime-forge/*",
    "src/*",
    "Cargo.toml",
    "Cargo.lock",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["./features/*"]

[dependencies]
# prime-forge = { path = "./features/prime-forge", version = "0.1.0", default-features = true }
# prime-derived = { path = "./features/prime-derived", version = "0.1.0", default-features = true }
# nalgebra-glm = "0.18.0"


# [[example]]
# name = "basic"
# path = "examples/basic.rs"
