[package]
name = "forged-in-lost-lands"
version = "0.3.51"
edition = "2021"
authors = ["Gabriel Bernardo"]
description = "Forged in Lost Lands is a simple game engine built in Rust that focuses on data control and ease of use"
license = "MIT"
repository = "https://github.com/GabrielBernardoDaSilva/forged-in-lost-lands"
keywords = ["entity-component", "entity", "component", "ease-of-use"]
categories = ["development-tools"]
include = [
    "README.md",
    "LICENSE",
    "examples/*",
    "features/*",
    "src/*",
    "Cargo.toml",
    "Cargo.lock",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["./features/*"]

[dependencies]
prime-forge = { path = "./features/prime-forge", version = "0.3.5" }
prime-derived = { path = "./features/prime-derived", version = "0.3.3" }
nalgebra-glm = "0.18.0"


[[example]]
name = "basic"
path = "examples/basic.rs"


