[package]
name = "prime-derived"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
quote = "1.0.9"
syn = "2.0.39"
proc-macro2 = "1.0"
prime-forge = { path = "../prime-forge" }
