[package]
name = "prime-derived"
version = "0.2.2"
edition = "2021"
authors = ["Gabriel Bernardo"]
description = "Forged in Lost Lands is a simple game engine built in Rust that focuses on data control and ease of use"
license = "MIT"
repository = "https://github.com/GabrielBernardoDaSilva/forged-in-lost-lands"


[lib]
proc-macro = true


[dependencies]
quote = "1.0.9"
syn = "2.0.39"
proc-macro2 = "1.0"
prime-forge = { path = "../prime-forge", version = "0.2.2"}


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
