[package]
name = "prime-forge"
version = "0.3.21"
edition = "2021"
authors = ["Gabriel Bernardo"]
description = "Forged in Lost Lands is a simple game engine built in Rust that focuses on data control and ease of use"
license = "MIT"
repository = "https://github.com/GabrielBernardoDaSilva/forged-in-lost-lands"


[dependencies]
nalgebra-glm = "0.18.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


